resolved layout issue in cards container

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body  {
 
 .cards {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     flex-wrap: wrap ;
     max-width: 1300px;
